; ModuleID = '/home/carl/AnghaBench/linux/arch/s390/kernel/extr_suspend.c_page_key_free.c'
source_filename = "/home/carl/AnghaBench/linux/arch/s390/kernel/extr_suspend.c_page_key_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page_key_data = type { %struct.page_key_data* }

@page_key_data = common dso_local global %struct.page_key_data* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @page_key_free() #0 {
  %1 = alloca %struct.page_key_data*, align 8
  br label %2

2:                                                ; preds = %5, %0
  %3 = load %struct.page_key_data*, %struct.page_key_data** @page_key_data, align 8
  %4 = icmp ne %struct.page_key_data* %3, null
  br i1 %4, label %5, label %13

5:                                                ; preds = %2
  %6 = load %struct.page_key_data*, %struct.page_key_data** @page_key_data, align 8
  store %struct.page_key_data* %6, %struct.page_key_data** %1, align 8
  %7 = load %struct.page_key_data*, %struct.page_key_data** %1, align 8
  %8 = getelementptr inbounds %struct.page_key_data, %struct.page_key_data* %7, i32 0, i32 0
  %9 = load %struct.page_key_data*, %struct.page_key_data** %8, align 8
  store %struct.page_key_data* %9, %struct.page_key_data** @page_key_data, align 8
  %10 = load %struct.page_key_data*, %struct.page_key_data** %1, align 8
  %11 = ptrtoint %struct.page_key_data* %10 to i64
  %12 = call i32 @free_page(i64 %11)
  br label %2

13:                                               ; preds = %2
  ret void
}

declare dso_local i32 @free_page(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
